# asr-finetuning-suicidal-data

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
asr/: __init__.py  audio.py  model.py  text.py
